Correct German sentences and fix spacing problems

--- a/common/assets/css/main.css
+++ b/common/assets/css/main.css
@@ -1273,3 +1273,18 @@ section,
 .starter-section {
   /* Add your styles here */
 }
+
+/**
+ * Fix for spacing.
+ */
+@media screen and (min-width: 640px) {
+    .cv-newline {
+        margin-top: 60px;
+    }
+}
+
+@media screen and (max-width: 639px) {
+    .cv-newline {
+        margin-top: -30px;
+    }
+}
